--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,15 +1,92 @@
-$fontColor: #0091aa;
-$colorHeading: #be4a14;
-#content  // div with id: content
-{
-    color: $fontColor;
-}
 
-h2
-{
-    color: $colorHeading;
-}
+  #Myheader{
+    background-color: lightblue;
+    color:red;
+    padding: 40px;
+    text-align: center;
+    font: bold;
 
-h1{
-    @extend h2;
-}
+    }
+    .block{
+      background:yellowgreen;
+      width: 600px;
+      padding:10px;
+      margin: 0px;
+
+    }
+    #weather{
+        color: mediumvioletred;
+        font: bolder;
+        text-align: center;
+
+    }
+   .divclas{
+      padding: 30px;
+       padding-block: 30px;
+       padding-inline: 30px;
+       background-color: chartreuse;
+       text-align: center;
+      font-size: 20px;
+      margin: 20px,30px,40px,50px;
+      width: 300px;
+      }
+    
+  #button1{
+        padding: 30px;
+       padding-block: 30px;
+       padding-inline: 30px;
+       background-color: chartreuse;
+       text-align: center;
+      font-size: 20px;
+      grid-gap: 50px;
+    
+      }
+     
+      #button2
+      {
+        padding: 30px;
+        padding-block: 30px;
+        padding-inline: 30px;
+        background-color: chartreuse;
+        text-align: center;
+        font-size: 20px;
+        grid-gap: 50px;
+     
+      }
+      #button3
+      {
+        padding: 30px;
+        padding-block: 30px;
+        padding-inline: 30px;
+        background-color: red;
+        text-align: center;
+        font-size: 20px;
+       
+     
+      }
+      //For Table elements
+      table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+        border: 1px salmon;
+        border-collapse: collapse;
+      }
+      
+      td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+        border-collapse: collapse;
+      }
+      
+      tr:nth-child(even) {
+        background-color: #dddddd;
+      }
+      
+      /* Use a media query to add a break point at 800px: */
+    @media screen and (max-width:800px){
+      #myheader,.block ,#weather, .divclas,#button1,  #button2, #button3,table,td,th,tr:nth-child(){
+      width:100%; /* The width is 100%, when the viewport is 800px or smaller */
+       } 
+  }
